add search, filter category, fix crud, list car

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -62,3 +62,66 @@
 .sidebar-nav {
   height: 100vh;
 }
+
+.btn-collapse {
+  color: white;
+  background-color: transparent;
+  border: none;
+  margin-right: 10px;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #ddd;
+}
+
+.role-container {
+  display: flex;
+  align-items: center;
+}
+
+.role-container .dropdown {
+  margin-right: 20px;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  border: #0D28A6 1px solid;
+}
+
+.search-container .input-group-text {
+  background-color: #f0f0f0;
+  border: none;
+}
+
+.search-container .form-control {
+  border: none;
+  border-radius: 0;
+  border-right: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.search-button {
+  border: 1px solid #0D28A6;
+  border-radius: 0;
+  background-color: #ffffff;
+  color: #0D28A6;
+  font-weight: bold;
+}
+
+.search-button-clicked {
+  background-color: #007bff;
+  color: #ffffff;
+}
+
+
+
+
+
+
