--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -77,3 +77,23 @@
     text-overflow: ellipsis;
     -webkit-line-clamp: 1;
 }
+
+.btn-choose-filter {
+    background-color: #FFFFFF !important;
+    border: 1px solid #AEB7E1 !important;
+    border-radius: 2px !important;
+    padding: 8px 12px !important;
+    height: 36px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 700 !important;
+    font-size: 14px !important;
+    line-height: 1 !important;
+    color: #AEB7E1 !important;
+}
+
+.btn-choose-filter.active {
+    background-color: #CFD4ED !important;
+    border: 1px solid #0D28A6 !important;
+    color: #0D28A6 !important;
+  }
