--- a/src/assets/css/list-cars.css
+++ b/src/assets/css/list-cars.css
@@ -90,6 +90,7 @@
     font-size: 14px !important;
     line-height: 1 !important;
     color: #AEB7E1 !important;
+    margin-right: 10px;
 }
 
 .btn-choose-filter.active {
