--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -26,11 +26,11 @@
   }
 
 
-    .sidenav---sidenav---_2tBP {
+.sidenav---sidenav---_2tBP {
     background: #0D28A6 !important;
-    }
+}
 
-    .font-icon {
+.font-icon {
     color: var(--neutral-01, #FFF);
     text-align: center;
     font-family: Arial;
@@ -38,14 +38,14 @@
     font-style: normal;
     }
 
-    .logo {
+.logo {
     width: 34px;
     height: 34px;
     background-color: #cfd4ed;
     text-align: center;
     flex-shrink: 0;
     margin: 15px;
-    }
+}
 
 .header-div {
     display: flex;
@@ -120,8 +120,80 @@
   color: #ffffff;
 }
 
+.bi-list{
+  font-weight: 500;
+  font-size: larger
+}
 
+.sidebar {
+  width: 350px;
+  height: 100%;
+  background-color: fff;
+  position: relative;
+  transition: width 0.3s ease;
+  z-index: 100
+}
 
+.sidebar.minimized {
+  width: 70px;
+  background-color: #0D28A6;
+}
 
+.sidebar-blue {
+  width: 80px;
+  background-color: #0D28A6;
+  height: 100%;
+}
 
+.sidebar-details {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  transition: width 0.3s ease;
+  z-index: 100;
+}
 
+.sidebar-minimized {
+  width: 80px; /* Adjust the width as needed */
+  height: 100%;
+  position: absolute;
+  transition: width 0.3s ease;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 101;
+}
+
+.text-sidebar{
+  text-decoration: none;
+  color: #FFF;
+  font-size: smaller;
+}
+
+.nav-link.active {
+  background-color: rgba(255, 255, 255, 0.30) !important;
+  color: #ffffff;
+}
+
+.cms-logo {
+  width: 100px;
+height: 34px;
+  flex-shrink: 0;
+  padding: 20px;
+  text-align: center;
+  font-size: 24;
+  font-weight: bold;
+  background-color: #cfd4ed;
+
+}
+
+.cms-logo-container {
+  margin-left: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: green
+}
