--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,11 +1,12 @@
 .template-areas {
     display: flex;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    overflow: auto;
 }
 
 .bg-cms {
     background-color: #F4F5F7;
+    min-height: 100vh;
 }
 
 .cms-logo {
