--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -1,16 +1,3 @@
-.topnav {
-    background-color: #0D28A6 !important;
-    height: 100;
-    padding: 13px;
-    margin-top: -10px;
-    padding-right: 0;
-    margin-left: -10px;
-    margin-right: -10px;
-    text-align: center;
-    font-style: Georgia;
-    font-size: 20px;
-}
-
 .header-nav {
     background: #ffffff;
     width: 100%;
@@ -140,7 +127,7 @@
   background-color: #0D28A6;
 }
 
-.sidebar-blue {
+.blue-sidebar {
   width: 80px;
   background-color: #0D28A6;
   height: 100%;
@@ -220,6 +207,7 @@
   background-color: #fff;
   flex-grow: 1;
   overflow-y: auto;
+  width: 200px;
 }
 .text-white-sidebar{
   /* margin-left: 20px; */
